objetivo 3 concluido. foi retirado o metodo recuperaIngredientesReceita do repository de ingredientes. acredito nao ser necessario

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,18 +4,18 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
-  #jpa:
-  #  hibernate:
-  #    ddl-auto: create
-  #  show-sql: true
-    # properties:
-    #   hibernate:
-    #     format_sql: true
   sql:
     init:
-      mode: always   # executa schema.sql no boot
+      mode: always   # executa schema.sql no boot TAVA ALWAYS ANTES TO TESTANDO
       schema-locations: classpath:schema.sql
       data-locations: classpath:data.sql
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true #REATE TABLE das tabelas que NÃO estão mapeadas po
+    properties:
+      hibernate:
+        format_sql: true
   h2:
     console:
       enabled: true
